<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/grp1" android:checkableBehavior="single">

        <item
            android:icon="@drawable/ic_baseline_person_24"
            android:id="@+id/kontaktyFragment"
            android:title="@string/kontakty"/>
        <item
            android:icon="@drawable/ic_baseline_home_24"
            android:id="@+id/detailObjektuFragment"
            android:title="@string/detail_objektu"/>
        <item
            android:icon="@drawable/ic_baseline_category_24"
            android:id="@+id/systemFragment"
            android:title="@string/system" />
        <item
            android:icon="@drawable/ic_baseline_pool_24"
            android:id="@+id/bazenFragment"
            android:title="@string/bazen" />
        <item
            android:icon="@drawable/ic_baseline_ac_unit_24"
            android:id="@+id/zdrojeFragment"
            android:title="@string/zdroje" />
        <item
            android:id="@+id/prislusenstviFragment"
            android:icon="@drawable/ic_baseline_add_shopping_cart_24"
            android:title="@string/prislusenstvi" />

    </group>

    <group android:id="@+id/grp2" android:checkableBehavior="none">

        <item
            android:icon="@drawable/ic_baseline_send_24"
            android:id="@+id/actionOdeslat"
            android:title="@string/odeslat"/>

        <item
            android:icon="@drawable/ic_baseline_delete_24"
            android:id="@+id/actionOdstranit"
            android:title="@string/odstranit_vse"/>

    </group>

</menu>
