<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/my_nav"
app:startDestination="@id/uvodFragment">

    <fragment
        android:id="@+id/uvodFragment"
        android:name="com.regulus.dotaznik.UvodFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_uvod" />
    <fragment
        android:id="@+id/kontaktyFragment"
        android:name="com.regulus.dotaznik.KontaktyFragment"
        android:label="@string/kontakty"
        tools:layout="@layout/fragment_kontakty">
        <action
            android:id="@+id/action_kontaktyFragment_to_detailObjektuFragment"
            app:destination="@id/detailObjektuFragment"
            app:popUpTo="@id/uvodFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_kontaktyFragment_self"
            app:destination="@id/kontaktyFragment"
            app:popUpTo="@id/uvodFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/detailObjektuFragment"
        android:name="com.regulus.dotaznik.DetailObjektuFragment"
        android:label="@string/detail_objektu"
        tools:layout="@layout/fragment_detail_objektu">
        <action
            android:id="@+id/action_detailObjektuFragment_to_kontaktyFragment"
            app:destination="@id/kontaktyFragment"
            app:popUpTo="@id/uvodFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_detailObjektuFragment_to_systemFragment"
            app:destination="@id/systemFragment"
            app:popUpTo="@id/uvodFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/systemFragment"
        android:name="com.regulus.dotaznik.SystemFragment"
        android:label="@string/system"
        tools:layout="@layout/fragment_system">
        <action
            android:id="@+id/action_systemFragment_to_detailObjektuFragment"
            app:destination="@id/detailObjektuFragment"
            app:popUpTo="@id/uvodFragment"
            app:popUpToInclusive="true" />
        <action 
            android:id="@+id/action_systemFragment_to_bazenFragment"
            app:destination="@id/bazenFragment"
            app:popUpTo="@id/uvodFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_systemFragment_to_zdrojeFragment"
            app:destination="@id/zdrojeFragment"
            app:popUpTo="@id/uvodFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment 
        android:id="@+id/bazenFragment"
        android:name="com.regulus.dotaznik.BazenFragment"
        android:label="@string/bazen"
        tools:layout="@layout/fragment_bazen">
        <action 
            android:id="@+id/action_bazenFragment_to_systemFragment"
            app:destination="@id/systemFragment"
            app:popUpTo="@id/uvodFragment"
            app:popUpToInclusive="true" />
        <action 
            android:id="@+id/action_bazenFragment_to_zdrojeFragment"
            app:destination="@id/zdrojeFragment"
            app:popUpTo="@id/uvodFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment 
        android:id="@+id/zdrojeFragment"
        android:name="com.regulus.dotaznik.ZdrojeFragment"
        android:label="@string/zdroje"
        tools:layout="@layout/fragment_zdroje">
        <action
            android:id="@+id/action_zdrojeFragment_to_bazenFragment"
            app:destination="@id/bazenFragment"
            app:popUpTo="@id/uvodFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_zdrojeFragment_to_systemFragment"
            app:destination="@id/systemFragment"
            app:popUpTo="@id/uvodFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_zdrojeFragment_self"
            app:destination="@id/zdrojeFragment"
            app:popUpTo="@id/uvodFragment"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>